// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WITH STYLES CONTEXT NATIVE, with provider 1`] = `
<div>
  <div>
    Hallo
  </div>
  <div>
    <div
      id="1"
    />
  </div>
</div>
`;

exports[`WITH STYLES CONTEXT NATIVE, without provider 1`] = `
<div>
  <div>
    Hallo
  </div>
  <div>
    <div
      id="123"
    />
  </div>
</div>
`;

exports[`WITH STYLES CONTEXT WEB, with provider 1`] = `
<div>
  <div>
    Hallo
  </div>
  <div>
    <div
      id="1"
    />
  </div>
</div>
`;

exports[`WITH STYLES CONTEXT WEB, without provider 1`] = `
<div>
  <div>
    Hallo
  </div>
  <div>
    <div
      id="123"
    />
  </div>
</div>
`;
